# screenitshot

./: .gitignore  CHANGELOG.md  IMPLEMENTATION.md  README.md  bump-version.sh  callouts.md  main.py  pyproject.toml
.github/workflows/: publish-docker.yml  publish-npm.yml  publish-pypi.yml
docker/: Dockerfile  Dockerfile.local  README.md
docs/: IMPLEMENTATION-NOTES.md  dev.md  tech-design.md
js/: .gitignore  eslint.config.js  package-lock.json  package.json  tsconfig.json
js/src/: cli.ts  detector.ts  index.ts  renderer.ts  types.ts
python/: README.md  copy-templates.sh  pyproject.toml
python/screenitshot/: __init__.py  cli.py
render/: RENDERER_SPEC.md  code.html  code.ts  csv.html  csv.ts  docx.html  docx.ts  epub.html  epub.ts  eslint.config.js  geojson.html  geojson.ts  gpx.html  gpx.ts  html.html  html.ts  index.html  ipynb.html  ipynb.ts  location.html  location.ts  md.html  md.ts  mmd.html  mmd.ts  package-lock.json  package.json  pdf.html  pdf.ts  pptx.html  pptx.ts  rtf.html  rtf.ts  tex.html  tex.ts  tsconfig.json  url.html  url.ts  vite.config.ts  xlsx.html  (+1 more)
render/src/templates/: pdf.ts
render/src/test/: index.html
