[project]
name = "screenitshot"
version = "0.6.0"
description = "Convert various file formats to high-quality screenshots"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["screenshot", "pdf", "converter", "docx", "xlsx", "pptx", "epub"]
authors = [
  {name = "screenitshot"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "playwright>=1.40.0",
]

[project.scripts]
screenitshot = "screenitshot.cli:main"

[project.urls]
Homepage = "https://github.com/iloahz/screenitshot"
Repository = "https://github.com/iloahz/screenitshot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["screenitshot"]

[tool.hatch.build.targets.sdist]
include = [
  "screenitshot/**",
]
